Major warnings cleanup on codebase.iterators package; minor cleanup on the codebase.streams package.